<resources>
    <string name="app_name">FamilyWallet</string>

    <string name="registration">Зарегистрироваться</string>
    <string name="login_in">Войти</string>

    <string name="main">Главная</string>
    <string name="spend">Потрачено за период:</string>
    <string name="income_text">Доход за период:</string>
    <string name="balance">Текущий баланс:</string>
    <string name="expenses">Расходы</string>
    <string name="income">Доходы</string>
    <string name="statistics">Статистика</string>
    <string name="operations">Операции</string>
    <string name="cash">наличные</string>
    <string name="card">карта</string>
    <string name="warning">Подтвердите операцию</string>
    <string name="message">Вы согласны внести следующие затраты в категорию: %s? </string>
    <string name="message1">Вы согласны внести следующие данные? </string>
    <string name="ok">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="out">Забрать</string>
    <string name="alert">Внимание</string>
    <string name="uid">Приветствую, %s! Ваш uid:</string>
    <string name="alert_negative_message_category_create">Вы пытаетесь сохранить пустое или существующее значение</string>
    <string name="alert_negative_message_transaction">Вы пытаетесь сохранить пустое значение</string>
    <string name="alert_dialog_delete_item_message">Вы действительно хотите удалить выбранный элемент?</string>
    <string name="users_settings">Экран пользователя</string>
    <string name="hint_edit_user_partner">введите uid партнера</string>
    <string name="settings_user_description">Для ведения общего бюджета вам необходимо обменяться uid-номерами с вашим партнером. Номер uid должен добавить каждый участик. Проект расчитан на 1-2 человек</string>
    <string name="bank">Копилка:</string>
    <string name="currency_title">Курсы валют(НБРБ), на %s:</string>
    <string name="open">Открыть</string>
    <string name="start_description">Пожалуйста, войдите в приложение с помощью вашего google-аккаунта</string>
    <string name="pie_description">Диаграмма затрат</string>
    <string name="no_filter">всё время</string>
    <string name="month">месяц</string>
    <string name="week">неделя</string>
    <string name="day">день</string>
    <string name="date_filter">выбрать дату</string>
    <string name="date_setting_title">Выбор периода отображения данных:</string>
    <string name="date_setting_title2">Архив данных:</string>
    <string name="date_start">выбрать начальную дату</string>
    <string name="date_end">выбрать конечную дату</string>
    <string name="alert_negative_date_range_message">Нельзя использовать выбранный период времени. Пожалуйста, проверьте даты!</string>
    <string name="alert_negative_auth_message">Ошибка! Проверьте интернет-соединение</string>
    <string name="alert_negative_auth_message2">Ошибка! Не удалось войти в аккаунт google</string>
    <string name="category_edit_hint">имя категории?</string>
    <string name="theme_icon_title">тема</string>
    <string name="category_operation_title">Операции по категории - %s</string>
    <string name="toast_others_title">Остальные затраты смотрите во вкладке "операции"</string>
    <string name="new_category_tittle">Создание новой категории "%s"</string>
    <string name="new_category_update_tittle">Изменение категории "%s"</string>
    <string name="change_theme_message">Для смены темы необходимо перезагрузить приложение</string>
    <string name="choose">Выбрать</string>
    <string name="choose_tittle">Выбор иконки для категории</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="update">Изменить</string>
    <string name="sms">sms</string>
    <string name="sms_title">Входящие sms:</string>
    <string name="sms_title_empty">нет sms</string>
    <string name="operation_title_empty">Пока что у вас нет внесенных операций</string>
    <string name="statistic_title_empty">Статистика пуста, внесите Доходы или Расходы</string>
    <string name="category_title_empty">Добавьте категорию</string>
    <string name="category_null_title">Выберите категорию</string>
    <string name="bank_transaction_overview">Перевести деньги в доходы в BYN?</string>
    <string name="currency_title_value">Курс обмена валюты:</string>
</resources>