<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.DateSettingFragment">

    <TextView
        android:id="@+id/startDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/date_start"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/date_end"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startDateTextView" />

    <Button
        android:id="@+id/rangeFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/primary_rectangle_button_background"
        android:padding="4dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/endDateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/noFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/expenses_rectangle_button_background"
            android:padding="4dp"
            android:text="@string/no_filter"
            android:textColor="@color/expensesColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/monthFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/expenses_rectangle_button_background"
            android:padding="4dp"
            android:text="@string/month"
            android:textColor="@color/expensesColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/weekFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/expenses_rectangle_button_background"
            android:padding="4dp"
            android:text="@string/week"
            android:textColor="@color/expensesColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dayFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/expenses_rectangle_button_background"
            android:padding="4dp"
            android:text="@string/day"
            android:textColor="@color/expensesColor"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>