<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.UsersSettingsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="32dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:gravity="start"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/uid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/red_rectangle_button_background"
        android:hint="@string/hint_edit_user_partner"
        android:lines="1"
        android:padding="10dp"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/red_rectangle_button_background"
        android:clickable="true"
        android:padding="4dp"
        android:text="@string/add"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/itemName"
        app:layout_constraintEnd_toEndOf="@id/itemName"
        app:layout_constraintTop_toTopOf="@id/itemName" />

</androidx.constraintlayout.widget.ConstraintLayout>